# libfsp

./: .gitignore  AUTHORS  CLAUDE.md  ChangeLog  FUZZING.md  GNUMakefile  LICENSE.txt  Makefile.am  NEWS  NOTICE  README.md  configure.ac  fsp.c  fsp.h  fsp_config_standalone.h  fsp_internal.h  fsp_test.c  fuzz_fsp_parse.c  fuzzing.md  test_lexer.l  test_parser.y
corpus/parse/: 1_basic.txt  2_multiline.txt  3_mixed.txt
dicts/: fsp.dict
scripts/: README.md  calculate-min-buffer.py  fsp-helper.py  postprocess-bison.py  postprocess-flex.py
tests/: error_at_eof.txt  long_string.expected  long_string.txt  missing_semicolon.txt  mixed.expected  simple.expected  triple-quoted.expected  unterminated_string.txt
